; ModuleID = '/home/carl/AnghaBench/stb/tools/extr_unicode.c_size_for_max_number_aligned.c'
source_filename = "/home/carl/AnghaBench/stb/tools/extr_unicode.c_size_for_max_number_aligned.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @size_for_max_number_aligned(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i64 @size_for_max_number(i32 %4)
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = icmp eq i64 %6, 3
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %11

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  br label %11

11:                                               ; preds = %9, %8
  %12 = phi i64 [ 4, %8 ], [ %10, %9 ]
  ret i64 %12
}

declare dso_local i64 @size_for_max_number(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
